--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -939,7 +939,7 @@
             if (item.action === 'double') {
                 info = `Double (${item.cube})`;
             }else if (item.action === 'take') {
-                info = `Take (${item.cube})`;
+                info = `Take`;
             } else if (item.action === 'win') {
                 info = `Победа (${item.points} очков)`;
             } else if (item.moves && item.moves.length > 0) {
