--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -231,7 +231,7 @@
             font-size: 18px;
             font-weight: bold;
             color: #007bff;
-            margin: 10px 0;
+            margin: 0;
         }
 
         @media (max-width: 768px) {
