--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -226,11 +226,20 @@
             margin: 5px 0;
         }
 
+        .board-footer {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: -20px;
+        }
+
         .move-info {
-            text-align: center;
             font-size: 18px;
             font-weight: bold;
             color: #007bff;
+        }
+
+        .pips-below-board {
             margin: 0;
         }
 
@@ -370,11 +379,9 @@
             border-radius: 4px;
             font-size: 18px;
             font-weight: bold;
-            margin-top: -20px;
             text-align: right;
             display: block;
             width: fit-content;
-            margin-left: auto;
         }
     </style>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -411,8 +418,10 @@
         <div id="players-info"></div>
         <div id="black-pips" class="pips-above-board">0</div>
         <canvas id="boardCanvas" width="800" height="800"></canvas>
-        <div id="move-info" class="move-info"></div>
-        <div id="red-pips" class="pips-below-board">0</div>
+        <div class="board-footer">
+            <div id="move-info" class="move-info"></div>
+            <div id="red-pips" class="pips-below-board">0</div>
+        </div>
 
         <div id="top-row">
             <button onclick="toggleInvert()" id="invertBtn"></button>
