--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -227,9 +227,7 @@
         }
 
         .board-footer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            position: relative;
             margin-top: -20px;
         }
 
@@ -237,9 +235,13 @@
             font-size: 18px;
             font-weight: bold;
             color: #007bff;
+            text-align: center;
         }
 
         .pips-below-board {
+            position: absolute;
+            right: 0;
+            top: 0;
             margin: 0;
         }
 
