--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -549,9 +549,7 @@
                     const gameScores = gameInfo.scores || {};
                     const gameRedScore = gameScores.Red || 0;
                     const gameBlackScore = gameScores.Black || 0;
-                    const matchText = matchLength > 0 ? `Матч до ${matchLength}<br>` : '';
-                    const scoreText = `Счет: ${gameRedScore} - ${gameBlackScore}<br>`;
-                    playersInfoDiv.innerHTML = `${matchText}Белые: ${redPlayer} – Черные: ${blackPlayer}<br>${scoreText}${document.getElementById('gameSelect') ? document.getElementById('gameSelect').outerHTML : ''}`;
+                    playersInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between;"><span>Матч до ${matchLength}</span><span>Счет: ${gameRedScore} - ${gameBlackScore}</span></div>Белые: ${redPlayer} – Черные: ${blackPlayer}<br>${document.getElementById('gameSelect') ? document.getElementById('gameSelect').outerHTML : ''}`;
 
                     // Найти все индексы ходов с удвоением
                     doubleTurns = data.map((item, index) => item.action === 'double' ? index : -1).filter(idx => idx !== -1);
