--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -58,7 +58,7 @@
         .hints-buttons {
             display: flex;
             justify-content: space-between;
-            margin-bottom: 20px;
+            margin-bottom: 2px;
         }
 
         .hint-toggle-btn {
@@ -436,8 +436,8 @@
 
         <div class="hints-table">
             <div class="hints-buttons">
-                <button id="moveHintsBtn" class="hint-toggle-btn">Решения по ходу</button>
-                <button id="cubeHintsBtn" class="hint-toggle-btn">Решения по кубу</button>
+                <button id="moveHintsBtn" class="hint-toggle-btn">Ход</button>
+                <button id="cubeHintsBtn" class="hint-toggle-btn">Куб</button>
             </div>
             <div id="moveHintsTable" class="hints-content"></div>
             <div id="cubeHintsTable" class="hints-content"></div>
