--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -187,6 +187,16 @@
             cursor: not-allowed;
         }
 
+        select {
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+            color: white;
+            background-color: #2d2d2d;
+            border: 1px solid #444;
+            border-radius: 6px;
+            padding: 5px;
+        }
+
         #prevBtn, #nextBtn, #invertBtn, #screenshotBtn {
             background-size: contain;
             background-repeat: no-repeat;
