--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -318,6 +318,9 @@
                 padding: 0 10px;
             }
 
+            .hints-table {
+                padding: 15px;
+            }
         }
 
         @media (max-width: 480px) {
